--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="section" id="intro">
     <div class="intro">
         <h2>👋 hi, i'm ridhika</h2>
-        a statistics & computing undergrad at <a href="https://uwaterloo.ca" style="color: #7A9BC2;" target="_blank">UWaterloo</a>
+        an undergrad studying statistics & computer science at <a href="https://uwaterloo.ca" style="color: #7A9BC2;" target="_blank">UWaterloo</a>
     </div>
   </div>
   <div class="section" id="cs-ta">
